css/div.css
div.AutocompleteArea {
    background-color: #f8f8f8;
}

div.SectionContainer {
	display: inline;
}

div.AutocompleteArea.container {
	position: absolute;
	z-index: 1;
	padding-left: 0.1em;
}

div.AutocompleteArea.option {
	cursor: pointer;
}

div.AutocompleteArea.option.hovered {
	background-color: LightGrey;
}

div.AutocompleteArea.option.unhovered {
}

div.SearchResult {
}

div.SearchResult:hover {
	background-color: LightGrey;
	cursor: pointer;
}

div.SearchResult.selected {
	background-color: DarkGrey;
}

div.SearchResult.selected:hover {
	background-color: grey;
}

